Added more history

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </article>
 
         <article id="history" class="article">
-            I also was a musician in a previous life
+            I also was a musician in a previous life, before dicinding I did not want to be taken advantage of due to my passion.
         </article>
     </body>
 </html>
