--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
 
     <body>
+        <h1>I am a student in NSS Cohort 22</h1>
         <article id="intro" class="article">
             I tie my shoes differently than you do.
         </article>
