--- a/index.html
+++ b/index.html
@@ -5,12 +5,52 @@
     </head>
 
     <body>
-        <article id="intro" class="article">
-            I tie my shoes differently than you do.
+        <header class="block" id="pageHeader">
+            <img id="logo" src="/images/cm_logo.svg" alt="Chris Miller's Logo">
+            CHRIS MILLER
+        </header>
+        <nav class="block" id="topNav">
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">RESUME</a></li>
+                <li><a href="#">PROJECTS</a></li>
+                <li><a href="#">BLOG</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+        </nav>
+        <article class="block" id="mainContent">
+            <h1>Placeholder text</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
+                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
+                culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <h2>Placeholder text</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
+                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
+                culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <h2>Placeholder text</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
+                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
+                culpa qui officia deserunt mollit anim id est laborum.
+            </p>
         </article>
-
-        <article id="history" class="article">
-            I also was a musician in a previous life, before dicinding I did not want to be taken advantage of due to my passion.
-        </article>
-    </body>
+        <footer class="block" id="pageFooter">
+            <p id="copyright">&copy; 2017</p>
+        </footer>
 </html>
