--- a/index.html
+++ b/index.html
@@ -12,45 +12,29 @@
         <nav class="block" id="topNav">
             <ul>
                 <li><a href="#">HOME</a></li>
-                <li><a href="#">RESUME</a></li>
-                <li><a href="#">PROJECTS</a></li>
-                <li><a href="#">BLOG</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="resume.html">RESUME</a></li>
+                <li><a href="projects.html">PROJECTS</a></li>
+                <li><a href="blog.html">BLOG</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
         <article class="block" id="mainContent">
-            <h1>Placeholder text</h1>
+            <h1>My Story</h1>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
-                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
-                culpa qui officia deserunt mollit anim id est laborum.
+                Hello and welcome! My name is Chris Miller and I am currently a student at NSS in Cohort 22.  While this may be my first time working with code, I have myriad other life expierences that have given me the skills needed to excell in this and all my future endevours.
             </p>
-            <h2>Placeholder text</h2>
+            <h2>Early Life / The Musician Years</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
-                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
-                culpa qui officia deserunt mollit anim id est laborum.
+                I was born into army brathood in 1986 on the Reese Air Force Base in Lubbock, TX.  From there I was moved Iceland, Floriad and back through texas before ending up in Louisville, KY for my formative years.  Forsaking my STEM education, I shipping out to Boston in search of a music education at the Berklee College of Music with a focus in bass performance and jazz composition.
             </p>
-            <h2>Placeholder text</h2>
+            <p>While there I joined an Americana / Rock N Roll band that became the major force in my life for the better part of the next decade.  We travelled around the world and made a wealth of music that I still look back on fondly.  However, when the dust settled after the inevitable band break up, I was left with a less than delightful view of the mucis industy, and a yearning desire to no longer sleep on strangers floors.</p>
+            <h2>Stage 2</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
-                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
-                culpa qui officia deserunt mollit anim id est laborum.
+                The only monetizable skill I had cultivated up until this time was a basic knowledge of DIY screenprinting.  I ended up taking a role in a very small company, knowing almost none of the neccessary skills, and have grown with them over the past 5 years.  In addition to my role as student, I am also currently Production Manager and Graphic Designer of screen printing for Nashville facility servicing the countries largest Team Sports Apparel Provide. 
             </p>
         </article>
         <footer class="block" id="pageFooter">
+            <img id="smallLogo" src="/images/cm_logo.svg" alt="Chris Miller's Logo">
             <p id="copyright">&copy; 2017</p>
         </footer>
 </html>
