--- a/resume.html
+++ b/resume.html
@@ -19,36 +19,69 @@
             </ul>
         </nav>
         <article class="block" id="mainContent">
-            <h1>Placeholder text</h1>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
-                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
-                culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            <h2>Placeholder text</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
-                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
-                culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            <h2>Placeholder text</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
-                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
-                culpa qui officia deserunt mollit anim id est laborum.
-            </p>
+            <h1>Work Experience</h1>
+            <ol>
+                <li>
+                    BSN / Lids Team Sports / NSG
+                    <ol>
+                        <li>2012 - Current : Production Manager of Screen Printing</li>
+                        <ol>
+                            <li>Schedule all production to ensure efficient production while meeting deadlines and allowing for dynamic adjustments to accommodate customer needs</li>
+                            <li>Coordinated delivery of blank goods to the production facility for use in production</li>
+                            <li>Organized all necessary paperwork and blank goods to stage jobs for production</li>
+                            <li>Identified and solved issues with order processing, both in bound and outbound</li>
+                            <li>Constantly re-evaluated methodology to make sure that the entire process - receiving, staging, production, shipping  - is working efficiently</li>
+                            <li>Directed the facility through two complete process overhauls, from a mostly pen and paper system to a self built order tracking system to a full scale warehouse management system</li>
+                            <li>Learned every system used in the facility to help improve the efficiency of the facility as a whole </li>
+                            <li>Ensured that all new hires are trained with best practices</li>
+                            <li>Responsible for a team of 13</li>
+                        </ol>
+                        <li>2011 - 2015 : Graphic Design | Art Department</li>
+                        <ol>
+                            <li>Designed apparel for middle / high / college athletic departments, local businesses and private customers</li>
+                            <li>Collaborated with schools during the re-branding process</li>
+                            <li>Communicated directly with customers over multiple stages of art revisions </li>
+                            <li>Tracked revisions and final approval of all art to ensure that production is completed the correct artwork</li>
+                            <li>Created and archived all necessary files for production</li>
+                        </ol>
+                        <li>2010 - 2014 : Screen Printer</li>
+                        <ol>
+                            <li>Operated manual and automatic screen printing presses in a high demand situation often requiring unique embellishment per piece</li>
+                            <li>Translated written instructions into correct reproduction of artwork</li>
+                            <li>Ensured quality control on a piece by piece basis</li>
+                        </ol>
+                    </ol>
+                </li>
+                <li>
+                    Professional Musician
+                    <ol>
+                        <li>
+                            2006 - 2011 : Touring and Studio Musician
+                            <ul>
+                                <li>Spent a lot of time in a van and at bars!  Great times, and forced me to become a self motivated worker who is alwasy striving for self improvment,</li>
+                            </ul>
+                        </li>
+                    </ol>
+                </li>
+            </ol>
+
+            <h2>Educational Experiences</h2>
+            <ol>
+                <li>2017 - 2018 : Nashville Software School
+                    <ol><li>Accomplishments TBD</li></ol>
+                </li>
+                <li>2004 - 2008 : Berklee College of Music
+                    <ol>
+                        <li>BM in Professional Music
+                            <ol>
+                                <li>Bass Performance</li>
+                                <li>Jazz Composition</li>
+                            </ol>
+                        </li>
+                    </ol>
+                </li>
+            </ol>
+
         </article>
         <footer class="block" id="pageFooter">
             <img id="smallLogo" src="/images/cm_logo.svg" alt="Chris Miller's Logo">
