Added content to contact page and changed class / id's for general style

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     </head>
 
     <body>
-        <header class="block" id="pageHeader">
+        <header class="block pageHeader">
             <img id="logo" src="/images/cm_logo.svg" alt="Chris Miller's Logo">
             CHRIS MILLER
         </header>
-        <nav class="block" id="topNav">
+        <nav class="block topNav">
             <ul>
                 <li><a href="#">HOME</a></li>
                 <li><a href="resume.html">RESUME</a></li>
@@ -18,7 +18,7 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
-        <article class="block" id="mainContent">
+        <article class="block mainContent">
             <h1>My Story</h1>
             <p>
                 Hello and welcome! My name is Chris Miller and I am currently a student at NSS in Cohort 22.  While this may be my first time working with code, I have myriad other life expierences that have given me the skills needed to excell in this and all my future endevours.
@@ -33,7 +33,7 @@
                 The only monetizable skill I had cultivated up until this time was a basic knowledge of DIY screenprinting.  I ended up taking a role in a very small company, knowing almost none of the neccessary skills, and have grown with them over the past 5 years.  In addition to my role as student, I am also currently Production Manager and Graphic Designer of screen printing for Nashville facility servicing the countries largest Team Sports Apparel Provide. 
             </p>
         </article>
-        <footer class="block" id="pageFooter">
+        <footer class="block pageFooter">
             <img id="smallLogo" src="/images/cm_logo.svg" alt="Chris Miller's Logo">
             <p id="copyright">&copy; 2017</p>
         </footer>
