--- a/blog.html
+++ b/blog.html
@@ -5,11 +5,11 @@
     </head>
 
     <body>
-        <header class="block" id="pageHeader">
+        <header class="block pageHeader">
             <img id="logo" src="/images/cm_logo.svg" alt="Chris Miller's Logo">
             CHRIS MILLER
         </header>
-        <nav class="block" id="topNav">
+        <nav class="block topNav">
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="resume.html">RESUME</a></li>
@@ -18,7 +18,7 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
-        <article class="block" id="mainContent">
+        <article class="block mainContent">
             <h1>Placeholder text</h1>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
@@ -50,7 +50,7 @@
                 culpa qui officia deserunt mollit anim id est laborum.
             </p>
         </article>
-        <footer class="block" id="pageFooter">
+        <footer class="block pageFooter">
             <img id="smallLogo" src="/images/cm_logo.svg" alt="Chris Miller's Logo">
             <p id="copyright">&copy; 2017</p>
         </footer>
