--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,11 @@
     </head>
 
     <body>
-        <header class="block" id="pageHeader">
+        <header class="block pageHeader">
             <img id="logo" src="/images/cm_logo.svg" alt="Chris Miller's Logo">
             CHRIS MILLER
         </header>
-        <nav class="block" id="topNav">
+        <nav class="block topNav">
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="resume.html">RESUME</a></li>
@@ -18,39 +18,28 @@
                 <li><a href="#">CONTACT</a></li>
             </ul>
         </nav>
-        <article class="block" id="mainContent">
-            <h1>Placeholder text</h1>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
-                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
-                culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            <h2>Placeholder text</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
-                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
-                culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            <h2>Placeholder text</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
-                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
-                culpa qui officia deserunt mollit anim id est laborum.
-            </p>
+        <article class="block mainContent">
+            <div class="contact">
+                <img src="/images/email_icon.svg" alt="" class="contact_icon">
+                <h2>camiller.yr@gmail.com</h2>
+            </div>
+            
+            <div class="contact">
+                <img src="/images/phone_icon.svg" alt="" class="contact_icon">
+                <h2>502.314.9457</h2>
+            </div>
+
+            <div class="contact">
+                <img src="/images/address_icon.svg" alt="" class="contact_icon" id="address_icon">
+                <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3219.491978470922!2d-86.70314518470319!3d36.20323518007589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886469cccece552d%3A0x84c85fe29f3f3a59!2s2700+Shadow+Ln%2C+Nashville%2C+TN+37216!5e0!3m2!1sen!2sus!4v1507222788947" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+
+            <div class="contact" id="soc_me">
+                <a href="http://www.twitter.com"><img src="/images/twitter_icon.svg" alt="" class="contact_icon"></a>
+                <a href="http://www.facebook.com"><img src="/images/facebook_icon.svg" alt="" class="contact_icon"></a>
+            </div>
         </article>
-        <footer class="block" id="pageFooter">
+        <footer class="block pageFooter">
             <img id="smallLogo" src="/images/cm_logo.svg" alt="Chris Miller's Logo">
             <p id="copyright">&copy; 2017</p>
         </footer>
