Fixed some text-align issues

--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
-        <article class="block mainContent">
+        <article class="block mainContent" id="resume">
             <h1>Work Experience</h1>
             <ol>
                 <li>
