Added Blog Entry

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,9 @@
 
             <div class="contact" id="soc_me">
                 <a href="http://www.twitter.com"><img src="/images/twitter_icon.svg" alt="" class="contact_icon"></a>
+                <h2>Twitter  </h2>
                 <a href="http://www.facebook.com"><img src="/images/facebook_icon.svg" alt="" class="contact_icon"></a>
+                <h2>Facebook</h2>
             </div>
         </article>
         <footer class="block pageFooter">
