Added a projects database and saved it localStorage

--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,22 @@
                     <p>
                         Use a for loop to iterate though an array to stack word / use if and conditional statements to add punctuation where desited.
                     </p>
+                    <h1><a href="https://github.com/camilleryr/coins-to-cash">Coins To Cash</a></h1>
+                    <p>
+                        Using for loops to convert between monetary amounts and coin amounts
+                    </p>
+                    <h1><a href="https://github.com/camilleryr/grades">Grades</a></h1>
+                    <p>
+                        Used arrays and objects to iterate though a randomly generated data set of grades and analyze a few simple datapoints
+                    </p>
+                    <h1><a href="https://github.com/camilleryr/home_inventory">Home Inventory</a></h1>
+                    <p>
+                        Created a database of household objects, used JSON to stringify and store in localStorage - used JSON to parse the string, add more data and restore to localStorage
+                    </p>
+                    <h1><a href="https://github.com/camilleryr/css-selectors">CSS Selectors</a></h1>
+                    <p>
+                        Used simple CSS selectors to change the stying of an HTML page
+                    </p>
                 </article>
 
             </div>
@@ -39,5 +55,6 @@
             </div>
         </footer>
 
+        <script src="/javascript/projects.js"></script>
 
     </body>
