Flexbox layout tweak

--- a/flexbox_text/index.html
+++ b/flexbox_text/index.html
@@ -17,7 +17,14 @@
         </nav>
         
     </header>
-    <main class="Site-content"></main>
+    <main class="Site-content">
+        <article>
+
+        </article>
+        <article>
+            
+        </article>
+    </main>
 
     <footer>
         <p>&copy Chris Miller 2017</p>
