--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 
 <head>
     <link href="./css/layout.css" rel="stylesheet">
+    <link href="./css/contact.css" rel="stylesheet">
 </head>
 
 <body>
@@ -11,7 +12,7 @@
         <nav>
             <div class="navButton"><a href="./index.html" id="homeButton">HOME</a></div>
             <div class="navButton"><a href="./resume.html" id="resumeButton">RESUME</a></div>
-            <div class="navButton"><a href="./projects.html" id="contentButton">CONTENT</a></div>
+            <div class="navButton"><a href="./projects.html" id="projectsButton">PROJECTS</a></div>
             <div class="navButton"><a href="./blog.html" id="blogButton">BLOG</a></div>
             <div class="navButton"><a href="./contact.html" id="contactButton">CONTACT</a></div>
         </nav>
