commiting all files

--- a/blog.html
+++ b/blog.html
@@ -19,10 +19,13 @@
         
     </header>
     <main class="Site-content">
-        <section id="contact"></section>
+        <div class="javascriptContent" id="blogContent"></div>
     </main>
 
     <footer>
         <p>&copy Chris Miller 2017</p>
     </footer>
+
+    <script src="./javascript/blogFactory.js"></script>
+    <script src="./javascript/blogController.js"></script>
 </body>
