--- a/projects.html
+++ b/projects.html
@@ -19,15 +19,13 @@
         
     </header>
     <main class="Site-content">
-        <article>
-
-        </article>
-        <article>
-            
-        </article>
+        <div class="javascriptContent" id="projectContent"></div>
     </main>
 
     <footer>
-        <p>&copy Chris Miller 2017</p>
+        <p>&copy Chris Miller 2017</p></
     </footer>
+
+    <script src="./javascript/projectsFactory.js"></script>
+    <script src="./javascript/projectsController.js"></script>
 </body>
