--- a/resume.html
+++ b/resume.html
@@ -19,15 +19,13 @@
         
     </header>
     <main class="Site-content">
-        <article>
-
-        </article>
-        <article>
-            
-        </article>
+        <div class="javascriptContent" id="resumeContent"></div>
     </main>
 
     <footer>
         <p>&copy Chris Miller 2017</p>
     </footer>
+
+    <script src="./javascript/resumeFactory.js"></script>
+    <script src="./javascript/resumeController.js"></script>
 </body>
