Completed functionality on blog pagination

--- a/blog.html
+++ b/blog.html
@@ -19,6 +19,7 @@
         
     </header>
     <main class="Site-content">
+        <nav id="paginationBar"></nav>
         <div class="javascriptContent" id="blogContent"></div>
     </main>
 
@@ -27,5 +28,5 @@
     </footer>
 
     <script src="./javascript/blogFactory.js"></script>
-    <script src="./javascript/blogController.js"></script>
+    <script src="./javascript/blogPaginationController.js"></script>
 </body>
