--- a/projects/index.html
+++ b/projects/index.html
@@ -9,7 +9,7 @@
     <main class="Site-content">
         <div id="blogControls">
             <div>
-                <button id="modal">Create Project</button>
+                <button id="modal" class="hidden">Create Project</button>
             </div>
             <div>
                 <input type="search" name="search" id="search" value="Search Projects">
