refactored so 'delete' does not remove data and fixed issue with project button'

--- a/projects/index.html
+++ b/projects/index.html
@@ -32,8 +32,8 @@
                 <input type="link" name="link" id="link" value="HTTP Link" class="formField">
             </form>
             <div class='modal__publishEdit'>
-                    <button id="publish">Publish</button>
-                    <button id="saveChanges">Save Changes</button>
+                <button class='' id="publish">Publish</button>
+                <button class='hidden' id="saveChanges">Save Changes</button>
             </div>
             <button id="closeModal">X</button>
             <section class="modal__listContents">
