changed email to work

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 <div class="col-md-6">
                     <article class="education">
                         <header>
-                            <h3>Berklee Colege Of Music</h3>
+                            <h3>Berklee College Of Music</h3>
                             <p>Bachelor's of Music -
                                 <strong>Graduated:</strong> 2008</p>
                         </header>
@@ -381,7 +381,7 @@
                         <span>Portfolio</span>
                     </h2>
                     <div class="spacer"></div>
-                    <p class="section-subtitle">Pleasure in the jon puts perfection in the worl. -Aristotle</p>
+                    <p class="section-subtitle">Pleasure in the job puts perfection in the work. -Aristotle</p>
                 </header>
 
                 <div id="grid-controls-wrapper">
@@ -556,7 +556,7 @@
                 <div class="col-sm-7">
                     <h3>Get in Touch</h3>
                     <!-- Configure the contact form by adding your email address on mail/contact_me.php line 17 -->
-                    <form class="form-horizontal" id="contactForm" novalidate>
+                    <form class="form-horizontal" id="contactForm" action="http://formspree.io/camiller.yr@gmail.com" method="post" novalidate>
                         <div class="control-group">
                             <label class="control-label" for="name">Name</label>
                             <div class="controls">
@@ -579,8 +579,9 @@
                             </div>
                         </div>
                         <div class="form-actions">
+                            <label class="control-label" for="submit">Submit Message</label>
                             <div id="success"></div>
-                            <button type="submit" class="btn btn-default btn-lg btn-block">Submit Message</button>
+                            <input name="submit" type="submit" value="Send" class="btn btn-default btn-lg btn-block">
                         </div>
                     </form>
                     <!-- End contact-form -->
@@ -604,7 +605,7 @@
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/waypoints.min.js"></script>
     <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+    <!-- <script src="js/contact_me.js"></script> -->
     <script src="js/main.js"></script>
 
 </body>
