Email form works in testing, trying to add a referrer header and https in the index - HOPE THIS WORKS

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <script src="js/respond.min.js"></script>
         <![endif]-->
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <meta name="referrer" content="origin">
 </head>
 
 <body>
@@ -556,7 +557,7 @@
                 <div class="col-sm-7">
                     <h3>Get in Touch</h3>
                     <!-- Configure the contact form by adding your email address on mail/contact_me.php line 17 -->
-                    <form class="form-horizontal" id="contactForm" action="http://formspree.io/camiller.yr@gmail.com" method="post" novalidate>
+                    <form class="form-horizontal" id="contactForm" action="https://formspree.io/camiller.yr@gmail.com" method="post" novalidate>
                         <div class="control-group">
                             <label class="control-label" for="name">Name</label>
                             <div class="controls">
