--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </button>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav" id="main-menu">
+                <ul class="nav navbar-nav">
                     <li>
                         <a href="#page-welcome">Home</a>
                     </li>
@@ -126,7 +126,7 @@
     </section>
     <!-- welcome ends -->
     <!-- profile begins -->
-    <section id="page-profile" class="page-profile">
+    <section id="page-profile" class="page-profile" name="page-profile">
         <div class="container">
             <header class="section-header">
                 <h2 class="section-title">Personal Profile</h2>
@@ -393,15 +393,6 @@
                         <li class="filter">
                             <a href="javascript:void(0)" data-filter=".bandstagram">Bandstagram</a>
                         </li>
-                        <li class="filter">
-                            <a href="javascript:void(0)" data-filter=".design">Design</a>
-                        </li>
-                        <li class="filter">
-                            <a href="javascript:void(0)" data-filter=".photography">Photography</a>
-                        </li>
-                        <li class="filter">
-                            <a href="javascript:void(0)" data-filter=".web">Website</a>
-                        </li>
                     </ul>
                 </div>
 
@@ -485,7 +476,7 @@
                     <span>Contact</span>
                 </h2>
                 <div class="spacer"></div>
-                <p class="section-subtitle">Lorem ipsum dolor sit amet, id iusto oportere mel. </p>
+                <p class="section-subtitle">In real life, wolves will do anything to avoid contact with mankind. -Liam Neeson</p>
             </header>
             <div class="row">
                 <div class="col-sm-5 contact-info">
